--- a/style.css
+++ b/style.css
@@ -1,79 +1,140 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: black;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    height: 100vh;
+  margin: 0;
+  padding: 0;
+  background: black;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  height: 100vh;
 }
 
 /* Mobile UI container */
 .mobile-ui {
-    height: 100vh;
-    /* full screen */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* vertical center */
-    align-items: center;
-    /* horizontal center */
+  height: 100vh; /* full screen */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* vertical center */
+  align-items: center; /* horizontal center */
+}
+
+.mobile-ui a {
+  text-decoration: none;
 }
 
 /* Logo */
 .logo {
-    width: 160px;
-    margin-bottom: 20px;
+  width: 160px;
+  margin-bottom: 50px;
 }
 
 /* Buttons */
 .btn {
-    display: block;
-    width: 250px;
-    padding: 15px;
-    margin: 15px auto;
-    border-radius: 30px;
-    border: none;
-    background: white;
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
+  display: block;
+  width: 250px;
+  padding: 15px;
+  margin: 15px auto;
+  border-radius: 30px;
+  border: none;
+  background: white;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+/* Name Page */
+.mobile-ui p {
+  margin: 20px auto;
+}
+
+/* Circle button */
+.input-container {
+  position: relative;
+  width: 280px;
+}
+
+.input-container input {
+  /* width: 100%; */
+  padding: 15px 55px 15px 20px; /* right space for button */
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  font-size: 16px;
+}
+
+.dob {
+  width: 200px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+.circle-btn {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  /* padding: 10px 18px; */
+  background: black;
+  color: white;
+  border: none;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 14px;
+  border: 2px solid white;
+}
+
+/* Success Message */
+#message {
+  font-size: 22px;
+  font-weight: bold;
+  color: green;
+}
+
+.circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fff;
+    color: #000;
 }
 
 /* Desktop message */
 .desktop-warning {
-    display: none;
+  display: none;
 }
 
 /* -------- Media Queries -------- */
 
 /* Desktop (Show warning, hide UI) */
 @media screen and (min-width: 769px) {
-    .mobile-ui {
-        display: none;
-    }
+  .mobile-ui {
+    display: none;
+  }
 
-    .desktop-warning {
-        display: flex;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
+  .desktop-warning {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 
-    .desktop-warning h2 {
-        font-size: 32px;
-        font-weight: bold;
-    }
+  .desktop-warning h2 {
+    font-size: 32px;
+    font-weight: bold;
+  }
 }
 
 /* Mobile (Show UI, hide warning) */
 @media screen and (max-width: 768px) {
-    .mobile-ui {
-        display: flex;
-    }
+  .mobile-ui {
+    display: flex;
+  }
 
-    .desktop-warning {
-        display: none;
-    }
+  .desktop-warning {
+    display: none;
+  }
 }
