--- a/style.css
+++ b/style.css
@@ -10,14 +10,11 @@ body {
 
 /* Mobile UI container */
 .mobile-ui {
-  height: 100vh;
-  /* full screen */
+  height: 100vh; /* full screen */
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* vertical center */
-  align-items: center;
-  /* horizontal center */
+  justify-content: center; /* vertical center */
+  align-items: center; /* horizontal center */
 }
 
 .mobile-ui a {
@@ -57,8 +54,7 @@ body {
 
 .input-container input {
   width: 200px;
-  padding: 15px 55px 15px 20px;
-  /* right space for button */
+  padding: 15px 55px 15px 20px; /* right space for button */
   border: none;
   outline: none;
   border-radius: 40px;
@@ -74,16 +70,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   right: 5px;
   top: 50%;
   transform: translateY(-50%);
-  /* padding: 10px 18px; */
   background: black;
   color: white;
   border: none;
-  width: 45px;
-  height: 45px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   cursor: pointer;
   font-size: 14px;
   border: 2px solid white;
+}
+
+.create-btn {
+  width: 150px;
+  padding: 10px;
+  border-radius: 50px;
+  margin-top: 20px;
+  border: none;
+  background: #fff;
+  color: #000;
 }
 
 /* Success Message */
